name:                diff-utils
version:             0.1.0.0
synopsis:            A library and some utilities for working with diffs
description:         A library and some utilities for working with diffs
homepage:            http://github.com/bgamari/diff-utils
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2015 Ben Gamari
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Diff2Html, Chunk, Diff, Utils
  build-depends:       base >=4.8 && <4.9,
                       text >=1.2 && <1.3,
                       patience >=0.1 && <0.2,
                       lucid >=2.9 && <2.10,
                       attoparsec >=0.13 && <0.14,
                       dlist >=0.7 && <0.8,
                       clay >=0.10 && <0.11
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings, FlexibleContexts, ExtendedDefaultRules, RecordWildCards, DeriveFunctor

executable diff2html
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       text >=1.2 && <1.3,
                       patience >=0.1 && <0.2,
                       lucid >=2.9 && <2.10,
                       attoparsec >=0.13 && <0.14,
                       dlist >=0.7 && <0.8,
                       clay >=0.10 && <0.11,
                       optparse-applicative >=0.11 && <1.0
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings, FlexibleContexts, ExtendedDefaultRules, RecordWildCards, DeriveFunctor