cabal-version:       3.0
name:                diff-utils
version:             0.1.0.0
synopsis:            A library and some utilities for working with diffs
description:         A library and some utilities for working with diffs
homepage:            http://github.com/bgamari/diff-utils
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2015 Ben Gamari
build-type:          Simple

library
  exposed-modules:     Diff2Html, Chunk, Diff, Utils
  hs-source-dirs:      src
  build-depends:       base >=4.8 && <4.16,
                       semigroups,
                       text >=1.2 && <1.3,
                       patience >=0.1 && <0.2,
                       lucid >=2.9 && <2.10,
                       attoparsec >=0.13 && <0.14,
                       dlist ^>=1.0,
                       clay >=0.10 && <0.14
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings, FlexibleContexts, ExtendedDefaultRules, RecordWildCards, DeriveFunctor

executable diff2html
  main-is:             Main.hs
  other-modules:       Style
  build-depends:       base,
                       diff-utils,
                       text,
                       attoparsec,
                       lucid >=2.9 && <2.10,
                       clay >=0.10 && <0.14,
                       optparse-applicative >=0.11 && <1.0
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings, FlexibleContexts, ExtendedDefaultRules, RecordWildCards, DeriveFunctor
